# ml-hackathon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  DATA.md  Dockerfile  HOW-TO.md  LICENSE  Makefile  README.md  REGLAMENT.md  TRAIN.md  alembic.ini  docker-compose.yaml  poetry.toml  pyproject.toml
.github/workflows/: ci.yml  load-test.yml
hackaton/: __init__.py
hackaton/eval/: __init__.py  cli.py  evaluator.py  metric.py
hackaton/service/: __init__.py  app.py  config.py  db.py  dto.py  main.py  prepare_manager.py  repositories.py
hackaton/train/: __init__.py  cli.py  training.py
notebook/: Feature_engineering_different_model_fitting_final_feature_selection_FINAL.ipynb  final_features_list.joblib  final_model_params.json  final_stable_lightgbm_model.joblib
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
scripts/: ci_rpc_smoke.py  load_test.py
tests/e2e/: test_rpc_api_contract_e2e.py
tests/unit/: test_eval_config_and_cli.py  test_eval_metric.py  test_service_smoke.py  test_train_smoke.py
